1. changed the background color of the elements to do list; 2. bugs fixed.

--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,11 @@
 
 <body>
   <div class="root">
-    <div class="logo">To do list</div>
-    <div class="to_do_list" id="to_do_list">
-    </div>
+    <h1 class="logo">To do list</h1>
+    <ul class="to_do_list" id="to_do_list">
+    </ul>
     <div class="input_fix_container">
-      <input type="text" placeholder="Что нужно сделать?" class="input" id="to_do_input" maxlength="34" />
+      <input type="text" placeholder="Что нужно сделать?" class="input" id="to_do_input" maxlength="100" />
     </div>
   </div>
   <script src="./index.js"></script>
