--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
 
 <body>
   <div class="root">
-    <h1 class="logo">To do list</h1>
+    <h1 class="header">To do list</h1>
     <ul class="to_do_list" id="to_do_list">
     </ul>
-    <div class="input_fix_container">
+    <div class="footer">
       <input type="text" placeholder="Что нужно сделать?" class="input" id="to_do_input" maxlength="100" />
     </div>
   </div>
