--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>To do list</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
 
-  <body>
-    <div class="root">
-      <h1 class="header">To do list</h1>
-      <ul class="to_do_list" id="to_do_list"></ul>
-      <div class="footer">
-        <input
-          type="text"
-          placeholder="Что нужно сделать?"
-          class="input"
-          id="to_do_input"
-          maxlength="100"
-        />
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>To do list</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <div id="root">
+    <h1 id="header">To do list</h1>
+    <ul id="to_do_list"></ul>
+    <div id="footer">
+      <input type="text" placeholder="Что нужно сделать?" id="to_do_input" maxlength="100" />
     </div>
-    <script src="./index.js"></script>
-  </body>
+  </div>
+  <script src="./index.js"></script>
   <script>
     window.navigator.serviceWorker
       .register('./service-worker.js')
       .then(registration => console.log('Service Worker registered'))
       .catch(err => console.log('Service Worker registration failed'));
   </script>
+</body>
+
 </html>
