added LocalStorage and manifest

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>To do list</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="manifest" href="../manifest.json">
 </head>
 
 <body>
@@ -18,12 +19,12 @@
     </div>
   </div>
   <script src="./index.js"></script>
-  <script>
+  <!-- <script>
     window.navigator.serviceWorker
       .register('./service-worker.js')
       .then(registration => console.log('Service Worker registered'))
       .catch(err => console.log('Service Worker registration failed'));
-  </script>
+  </script> -->
 </body>
 
 </html>
