--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,12 @@
     </div>
   </div>
   <script src="./index.js"></script>
-  <!-- <script>
+  <script>
     window.navigator.serviceWorker
       .register('./service-worker.js')
       .then(registration => console.log('Service Worker registered'))
       .catch(err => console.log('Service Worker registration failed'));
-  </script> -->
+  </script>
 </body>
 
 </html>
