--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>To do list</title>
   <link rel="stylesheet" href="styles.css" />
-  <link rel="manifest" href="../manifest.json">
+  <link rel="manifest" href="./manifest.webmanifest">
 </head>
 
 <body>
