--- a/index.html
+++ b/index.html
@@ -1,29 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>To do list</title>
-  <link rel="stylesheet" href="/styles.8986bff4.css">
-  <link rel="manifest" href="/manifest.webmanifest">
-<script src="/styles.8986bff4.js"></script></head>
-
-<body>
-  <div id="root">
-    <h1 id="header">To do list</h1>
-    <ul id="to_do_list"></ul>
-    <div id="footer">
-      <input type="text" placeholder="Что нужно сделать?" id="to_do_input" maxlength="100">
-    </div>
-  </div>
-  <script src="/src.e31bb0bc.js"></script>
-  <script>window.navigator.serviceWorker.register('./service-worker.js').then(function (registration) {
-  return console.log('Service Worker registered');
-}).catch(function (err) {
-  return console.log('Service Worker registration failed');
-});</script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>To do list</title><link rel="stylesheet" href="/To_do_list/styles.7c09386e.css"><link rel="manifest" href="/To_do_list/manifest.webmanifest"></head><body> <div id="root"> <h1 id="header">To do list</h1> <ul id="to_do_list"></ul> <div id="footer"> <input type="text" placeholder="Что нужно сделать?" id="to_do_input" maxlength="100"> </div> </div> <script src="/To_do_list/src.8b8d10b7.js"></script> <script>window.navigator.serviceWorker.register("./service-worker.js").then(function(e){return console.log("Service Worker registered")}).catch(function(e){return console.log("Service Worker registration failed")});</script> </body></html>
