--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>To do list</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="apple-touch-icon" sizes="180x180" href="../src/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../src/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../src/favicon/favicon-16x16.png">
+  <link rel="mask-icon" href="../src/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#3D3E58">
+  <meta name="theme-color" content="#3D3E58">
   <link rel="manifest" href="./manifest.webmanifest">
 </head>
 
@@ -19,12 +25,12 @@
     </div>
   </div>
   <script src="./index.js"></script>
-  <script>
+  <!-- <script>
     window.navigator.serviceWorker
       .register('./service-worker.js')
       .then(registration => console.log('Service Worker registered'))
       .catch(err => console.log('Service Worker registration failed'));
-  </script>
+  </script> -->
 </body>
 
 </html>
