--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>To do list</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon/favicon-16x16.png"
+    />
+    <link
+      rel="mask-icon"
+      href="./favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <link rel="manifest" href="./manifest.webmanifest" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>To do list</title>
-  <link rel="stylesheet" href="./styles.css" />
-  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
-  <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="theme-color" content="#3D3E58">
-  <link rel="manifest" href="./manifest.webmanifest">
-</head>
-
-<body>
-  <div id="root">
-    <h1 id="header">To do list</h1>
-    <ul id="to_do_list"></ul>
-    <div id="footer">
-      <input type="text" placeholder="Что нужно сделать?" id="to_do_input" maxlength="100" />
+  <body>
+    <div id="root">
+      <h1 id="header">To do list</h1>
+      <ul id="to_do_list"></ul>
+      <div id="footer">
+        <input
+          type="text"
+          placeholder="Что нужно сделать?"
+          id="to_do_input"
+          maxlength="100"
+        />
+      </div>
     </div>
-  </div>
-  <script src="./index.js"></script>
-  <script>
-    window.navigator.serviceWorker
-      .register('./service-worker.js')
-      .then(registration => console.log('Service Worker registered'))
-      .catch(err => console.log('Service Worker registration failed'));
-  </script>
-</body>
-
+    <script src="./index.js"></script>
+    <script>
+      window.navigator.serviceWorker
+        .register('./service-worker.js')
+        .then(registration => console.log('Service Worker registered'))
+        .catch(err => console.log('Service Worker registration failed'));
+    </script>
+  </body>
 </html>
